fixing red circle

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         functions: {},
         dumpLineNumbers: "comments",
         relativeUrls: false,
-        rootpath: ":localhost/"
+        rootpath: ""
     };
     </script>
     <script src="js/less-1.7.5.min.js"></script>
@@ -145,7 +145,7 @@
                             <span class="space"></span>
                             <img class="services-icon" src="img/icon-tech_leadership.png">
                             <h5 class="uppercase-text">Tech Leadership & Consulting</h5>
-                            <p>We act as your interim CTO, in the event you require someone to fill in for the missing Chief Technology Officer that you’ve yet to hire</p>
+                            <p>We act as your interim CTO, filling in for the missing Chief Technology Officer that you’ve yet to hire</p>
                             <span class="space"></span>
                         </div>
                         <!-- /.paper -->
@@ -197,7 +197,7 @@
                 <div class="space"></div>
                 <div class="row">
                     <div class="col-md-4 col-md-offset-4 animate text-center" data-animate="fadeInLeft">
-                        <h2><strong>Have a project for us?</strong></h2>
+                        <h2><strong>Ready to get your project started?</strong></h2>
                         <button onClick="window.location.href='mailto:sales@verso.digital'" class="btn btn-punch btn-hg btn-secondary btn-inverse btn-block square-button">Work with us!</button>
                         <div class="space"></div>
                         <!-- /.col -->
