fixing red circle

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         functions: {},
         dumpLineNumbers: "comments",
         relativeUrls: false,
-        rootpath: ""
+        rootpath: "versodigital/"
     };
     </script>
     <script src="js/less-1.7.5.min.js"></script>
