fixing spacing issue on the opening image

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                     <div class="col-md-3">
                         <div class="logo">
                             <a href="" title="">
-                                <img src="img/logo-black.png" class="black-logo standard-logo middle-content" alt="" height="50px"/>
+                                <img src="img/logo-black.png" class="black-logo standard-logo middle-content" alt="" height="50px" />
                                 <img src="img/logo-white.png" class="white-logo standard-logo middle-content" alt="" />
-                                <img src="img/logo-black.png" class="black-logo retina-logo middle-content" alt="" height="50px"/>
+                                <img src="img/logo-black.png" class="black-logo retina-logo middle-content" alt="" height="50px" />
                                 <img src="img/logo-white.png" class="white-logo retina-logo middle-content" alt="" />
                             </a>
                         </div>
@@ -85,7 +85,7 @@
         </header>
         <!-- /header -->
         <!-- PARALLAX SECTION -->
-        <section class="big-padding section background-wrapper">
+        <section class=" section background-wrapper">
             <div id="home" class="background-image parallax-background" data-stellar-background-ratio="1" style="background: url(img/banner-large.jpg);"></div>
             <div class="container">
                 <div class="row">
@@ -93,6 +93,9 @@
                         <div class="element">
                             <h1 class="slider-text-1 animate" data-animate="fadeInUp">We
                             <span class="encircle">take charge</span> of your digital solutions.</h1>
+                            <span class="space"></span>
+                            <span class="space"></span>
+                            <span class="space"></span>
                         </div>
                     </div>
                 </div>
