Remove underlines from who we are/what we do etc

--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-lg-8 col-lg-offset-2 animate" data-animate="fadeIn">
-                        <span class="underline lighter">WHO ARE WE?</span>
+                        <span class="lighter">WHO ARE WE?</span>
                         <h2><strong>We're your ‘CTO for Hire.’</strong></h2>
                         <img class="who_we_are" src="img/icon-who_we_are.gif">
                         <hr>
@@ -118,7 +118,7 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-lg-8 col-lg-offset-2 animate" data-animate="fadeIn">
-                        <span class="underline lighter">WHAT DO WE DO?</span>
+                        <span class="lighter">WHAT DO WE DO?</span>
                         <h2><strong>Our Services</strong></h2>
                         <hr>
                         <p>We have a few tricks up our sleeves. It all depends on what you need to get your product up and running
