--- a/src/index.html
+++ b/src/index.html
@@ -205,21 +205,30 @@
         <section id="footer" class="section secondary-background">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-6">
+                    <div class="col-md-3 hidden-xs">
                         <div class="widget">
                             <img src="img/logomark-white.png" height="75px" class="footer-logo">
                         </div>
 
                     </div>
-                    <div class="col-xs-6">
+                    <div class="col-md-3">
+                        <div class="widget">
+                            <address>
+                                <strong>Verso Digital Pte. Ltd.</strong>
+                                <br> 10 Anson Road
+                                <br> #18-03 International Plaza
+                                <br> Singapore 079903
+                            </address>
+                        </div>
+                        <!--/.widget-->
+                    </div>
+                    <div class="col-md-3">
                         <div class="widget">
                             <address>
                                 <strong>Verso Digital Limited</strong>
                                 <br> 6th floor, Cheung Hing Industrial Building
                                 <br> 12P Smithfield Road
                                 <br> Kennedy Town Hong Kong
-                                <br>
-                                <abbr title="Phone">P:</abbr> +852 9408-3364
                             </address>
                         </div>
                         <!--/.widget-->
