--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@
             </div>
             <!-- /.container -->
         </section>
-        <section class="section">
+        <section class="section services">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-md-offset-2 animate" data-animate="fadeInUp">
