Fix laptop pic responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
                 <div class="col-lg-8 col-lg-offset-2 animate" data-animate="fadeIn">
                   <span class="lighter">WHO ARE WE?</span>
                   <h2><strong>We're your ‘CTO for Hire.’</strong></h2>
-                  <img class="who_we_are" src="img/icon-who_we_are.gif">
+                  <img class="who_we_are img-responsive" src="img/icon-who_we_are.gif">
                   <hr>
                   <p>We provide part-time tech leadership and advisory services to early-stage <span class="strong-text underline">startups</span> or businesses that have yet to transition towards hiring full-time talent, with focus on the <span class="strong-text underline">Asian market</span>
                   </p>
