--- a/src/index.html
+++ b/src/index.html
@@ -60,9 +60,6 @@
                       <a href="#ourservices">Our Services</a>
                     </li>
                     <li>
-                      <a href="#ourservices">Our Services</a>
-                    </li>
-                    <li>
                       <a href="#contactus">Contact Us</a>
                     </li>
                   </ul>
@@ -232,7 +229,7 @@
                     <span class="space"></span>
                     <img class="services-icon" src="img/icon-development.gif">
                     <h3 class="uppercase-text">Development & Production</h3>
-                    <p>We specialise in app and web development, responsive mobile solutions as well as complex backend solutions</p>
+                    <p>We specialise in app and web development, responsive mobile solutions as well as demanding backend builds. Node.js-based APIs and complex Docker deployments are our forte.</p>
                     <span class="space"></span>
                   </div>
                   <!--/.paper -->
@@ -246,7 +243,7 @@
                     <span class="space"></span>
                     <img class="services-icon" src="img/icon-interface_design.gif">
                     <h3 class="uppercase-text">Interface Design</h3>
-                    <p>Great interfaces are not just about pretty pixels. We create interfaces that are delightful as well as intuitive for your users</p>
+                    <p>Great interfaces are not just about pretty pixels. We create interfaces that are delightful as well as intuitive for your users.</p>
                   </div>
                   <!-- /.paper -->
                 </div>
@@ -256,7 +253,7 @@
                     <span class="space"></span>
                     <img class="services-icon" src="img/icon-ux.gif">
                     <h3 class="uppercase-text">User Experience</h3>
-                    <p>We build products on a solid foundation of user research and testing, solving design challenges dynamically towards a bespoke experience for your users</p>
+                    <p>We build products on a solid foundation of user research and testing, solving design challenges dynamically towards a bespoke experience for your users.</p>
                   </div>
                   <!--/.paper -->
                 </div>
