--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,9 @@
                       <a href="#about">About Us</a>
                     </li>
                     <li>
+                      <a href="#team">Team</a>
+                    </li>
+                    <li>
                       <a href="#ourservices">Our Services</a>
                     </li>
                     <li>
@@ -75,8 +78,8 @@
         </header>
         <!-- /header -->
         <!-- PARALLAX SECTION -->
-        <section class="section background-wrapper">
-          <div id="home" class="background-image parallax-background" data-stellar-background-ratio="1" style="background: url(img/banner-large.jpg);"></div>
+        <section id="home" class="section background-wrapper">
+          <div class="background-image parallax-background" data-stellar-background-ratio="1" style="background: url(img/banner-large.jpg);"></div>
           <div class="container">
             <div class="row">
               <div class="col-md-12">
@@ -193,8 +196,8 @@
             <!-- /.container -->
           </section>
           <!-- /.section -->
-          <section id="ourservices" class="section grey-background">
-            <div class="container">
+          <section id="ourservices" class="section">
+            <div class="fluid-container grey-background ourservices-intro">
               <div class="row text-center">
                 <div class="col-lg-8 col-lg-offset-2 animate" data-animate="fadeIn">
                   <span class="lighter">WHAT DO WE DO?</span>
@@ -208,8 +211,6 @@
               <!-- /.row -->
             </div>
             <!-- /.container -->
-          </section>
-          <section class="section services">
             <div class="container">
               <div class="row">
                 <div class="col-md-4 col-md-offset-2 animate" data-animate="fadeInUp">
