Change Adinda's face

--- a/src/index.html
+++ b/src/index.html
@@ -197,7 +197,7 @@
                 <div class="col-md-4 animate" data-animate="fadeInUp">
                   <div class="text-center">
                     <span class="space"></span>
-                    <img class="team-member" src="img/team-adinda.png">
+                    <img class="team-member" src="img/team-adinda-20160613.png">
                     <h3 class="uppercase-text">Adinda Savitri</h3>
                     <p class="team-title">Software Developer</p>
                     <p>Adinda is Verso's employee number one. Despite only recently graduating from National University of Singapore's highly ranked Computer Science programme, she's already written thousands of lines of production code in half a dozen different languages.</p>
